plugins {
    id 'org.springframework.boot' version '2.5.7'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'java'
}

group = 'com.bulamen7'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.1'
    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
    implementation'org.postgresql:postgresql'
    implementation 'net.eunjae.android.modelmapper:ModelMapper:1.0.6'
    developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
    runtimeOnly 'com.h2database:h2:1.4.200'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
    testImplementation 'org.assertj:assertj-core:3.21.0'
}

test {
    useJUnitPlatform()
}
